              well-defined (but unimportant) total order.
            - Added tightEncode() and tightEncoding() to help with perfect
              hashing.
            - Added a constructor for Laurent2 that takes coefficients via an
              iterator pair.
        Class LayeredChain:
            - Added copy assignment operator.
            - Added member and global swap() functions.
        Class LayeredChainPair:
            - Routine isLayeredChainPair() is now called recognise(), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
            - Deprecated clone().  Just use the copy constructor instead.
            - Routine chain() now returns by reference, not by pointer.
        Class LayeredLensSpace:
            - Routine isLayeredLensSpace() is now called recognise(), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
            - Deprecated clone().  Just use the copy constructor instead.
        Class LayeredLoop:
            - Routine isLayeredLoop() is now called recognise(), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
            - Deprecated clone().  Just use the copy constructor instead.
        Class LayeredSolidTorus:
            - Routines isLayeredSolidTorus(), formsLayeredSolidTorusBase()
              and formsLayeredSolidTorusTop() are now called recognise(),
              recogniseFromBase() and recogniseFromTop(), and now return a