@@ -253,6 +253,46 @@ class LayeredChain : public StandardTriangulation {
          */
         void invert();
 
+        /**
+         * Determines whether this and the given structure represent
+         * the same type of layered chain.
+         *
+         * Specifically, two layered chains will compare as equal if and
+         * only if they have the same index (i.e., the same number of
+         * tetrahedra).
+         *
+         * This test follows the general rule for most subclasses of
+         * StandardTriangulation (excluding fixed structures such as
+         * SnappedBall and TriSolidTorus): two objects compare as equal if and
+         * only if they have the same combinatorial parameters (which for this
+         * subclass means they describe isomorphic structures).
+         *
+         * @param other the structure with which this will be compared.
+         * @return \c true if and only if this and the given structure
+         * represent the same type of layered chain.
+         */
+        bool operator == (const LayeredChain& other) const;
+
+        /**
+         * Determines whether this and the given structure represent
+         * different types of layered chain.
+         *
+         * Specifically, two layered chains will compare as equal if and
+         * only if they have the same index (i.e., the same number of
+         * tetrahedra).
+         *
+         * This test follows the general rule for most subclasses of
+         * StandardTriangulation (excluding fixed structures such as
+         * SnappedBall and TriSolidTorus): two objects compare as equal if and
+         * only if they have the same combinatorial parameters (which for this
+         * subclass means they describe isomorphic structures).
+         *
+         * @param other the structure with which this will be compared.
+         * @return \c true if and only if this and the given structure
+         * represent different types of layered chain.
+         */
+        bool operator != (const LayeredChain& other) const;
+
         std::unique_ptr<Manifold> manifold() const override;
         AbelianGroup homology() const override;
         std::ostream& writeName(std::ostream& out) const override;
@@ -303,6 +343,14 @@ inline Perm<4> LayeredChain::bottomVertexRoles() const {
 }
 inline Perm<4> LayeredChain::topVertexRoles() const {
     return topVertexRoles_;
+}
+
+inline bool LayeredChain::operator == (const LayeredChain& other) const {
+    return index_ == other.index_;
+}
+
+inline bool LayeredChain::operator != (const LayeredChain& other) const {
+    return index_ != other.index_;
 }
 
 inline std::ostream& LayeredChain::writeName(std::ostream& out) const {
