@@ -57,6 +57,7 @@ void addLayeredChain(pybind11::module_& m) {
         .def("reverse", &LayeredChain::reverse)
         .def("invert", &LayeredChain::invert)
     ;
+    regina::python::add_eq_operators(c);
     regina::python::add_output(c);
 
     m.def("swap", (void(*)(LayeredChain&, LayeredChain&))(regina::swap));
